# ComfyUI-BespokeAI-3D

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: README.md
web/: bespokeai_3d_preview.js  bespokeai_3d_viewer.js
workflows/: README.md  basic_image_to_3d.json
