[project]
name = "comfyui-bespokeai-3d"
version = "1.0.0"
description = "ComfyUI custom nodes for BespokeAI image-to-3D generation"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Sofiane", email = "contact@bespokeai.build"}
]
keywords = [
    "comfyui",
    "3d",
    "image-to-3d",
    "ai",
    "generation",
    "glb",
    "obj",
    "bespokeai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
]

[project.urls]
Homepage = "https://github.com/SofianeAlla/ComfyUI-BespokeAI-3D"
Documentation = "https://github.com/SofianeAlla/ComfyUI-BespokeAI-3D#readme"
Repository = "https://github.com/SofianeAlla/ComfyUI-BespokeAI-3D.git"
Issues = "https://github.com/SofianeAlla/ComfyUI-BespokeAI-3D/issues"
Changelog = "https://github.com/SofianeAlla/ComfyUI-BespokeAI-3D/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]
